add some things

--- a/portfolio.html
+++ b/portfolio.html
@@ -281,7 +281,7 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
-        <div>
+        <div class="footer__contacts">
           <a class="logo" href="./index.html">Web<span class="logo__footer">Studio</span></a>
           <address class="address">
             <ul class="address__list">
