--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <div class="container">
+        <div class="container hero__container">
           <h1 class="hero__title">Ефективні рішення для <br />вашого бізнесу</h1>
           <button type="button" class="hero__button" data-open-modal>Замовити послугу</button>
         </div>
@@ -466,7 +466,7 @@
     </main>
     <footer class="footer">
       <div class="container footer__container">
-        <div>
+        <div class="footer__contacts">
           <a class="logo" href="./index.html">Web<span class="logo__footer">Studio</span></a>
           <address class="address">
             <ul class="address__list">
