--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
         <a class="logo" href="./index.html">Web<span class="logo__header">Studio</span></a>
         <button
           type="button"
-          class="mobile__button menu-toggle js-open-menu"
+          class="menu__toggle js-open-menu"
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
-          <svg class="mobile__icon" aria-label="перемикач мобільного меню">
+          <svg class="mobile__icon" aria-label="мобільне меню">
             <use class="icon__menu" href="./images/icons.svg#icon-menu"></use>
-            <use class="icon__close" href="./images/icons.svg#icon-close__menu"></use>
           </svg>
         </button>
         <nav class="navigation">
@@ -847,23 +846,44 @@
         </form>
       </div>
     </div>
-    <!-- <div class="menu__container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-        <svg
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          ></path>
+
+    <div class="menu__container js-menu-container" id="mobile-menu"">
+      <button type="button" class="menu__toggle js-close-menu">
+        <svg class="mobile__icon" aria-label="мобільне меню">
+          <use class="icon__close" href="./images/icons.svg#icon-close__menu"></use>
         </svg>
       </button>
-      <div></div> -->
+
+      <ul class="menu">
+        <li class="menu__item">
+          <a class="menu__link current" href="./index.html">Студія</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="./portfolio.html">Портфоліо</a>
+        </li>
+        <li class="menu__item"><a class="navigation__link" href="">Контакти</a></li>
+      </ul>
+
+      <ul class="contmenu">
+        <li class="contmenu__item">
+          <a class="contmenu__link" href="mailto:info@devstudio.com">
+            info@devstudio.com</a
+          >
+        </li>
+        <li class="contmenu__item">
+          <a class="contmenu__link" href="tel:+380961111111">
+            +38 096 111 11 11</a
+          >
+        </li>
+      </ul>
+      <ul class="mobsocials">
+        <li class="mobsocials__item"><a href="https://instagram.com/" class="mobsocials__link">Instagram</a></li>
+        <li class="mobsocials__item"><a href="https://twitter.com/" class="mobsocials__link">Twitter</a></li>
+        <li class="mobsocials__item"><a href="https://facebook.com/" class="mobsocials__link">Facebook</a></li>
+        <li class="mobsocials__item"><a href="https://linkedin.com/" class="mobsocials__link">LinkedIn</a></li>
+      </ul>
+    </div>
+
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
