--- a/portfolio.html
+++ b/portfolio.html
@@ -858,10 +858,10 @@
         </li>
       </ul>
       <ul class="mobsocials">
-        <li class="mobsocials__item"><a href="https://instagram.com/" class="mobsocials__link">Instagram</a></li>
-        <li class="mobsocials__item"><a href="https://twitter.com/" class="mobsocials__link">Twitter</a></li>
-        <li class="mobsocials__item"><a href="https://facebook.com/" class="mobsocials__link">Facebook</a></li>
-        <li class="mobsocials__item"><a href="https://linkedin.com/" class="mobsocials__link">LinkedIn</a></li>
+        <li class="mobsocials__item"><a href="https://instagram.com/" class="mobsocials__link" rel="noreferrer noopener" target="_blank">Instagram</a></li>
+        <li class="mobsocials__item"><a href="https://twitter.com/" class="mobsocials__link" rel="noreferrer noopener" target="_blank">Twitter</a></li>
+        <li class="mobsocials__item"><a href="https://facebook.com/" class="mobsocials__link" rel="noreferrer noopener" target="_blank">Facebook</a></li>
+        <li class="mobsocials__item"><a href="https://linkedin.com/" class="mobsocials__link" rel="noreferrer noopener" target="_blank">LinkedIn</a></li>
       </ul>
     </div>
 
