--- a/index.html
+++ b/index.html
@@ -928,16 +928,16 @@
       </ul>
       <ul class="mobsocials">
         <li class="mobsocials__item">
-          <a href="https://instagram.com/" class="mobsocials__link">Instagram</a>
+          <a href="https://instagram.com/" class="mobsocials__link" rel="noreferrer noopener" target="_blank">Instagram</a>
         </li>
         <li class="mobsocials__item">
-          <a href="https://twitter.com/" class="mobsocials__link">Twitter</a>
+          <a href="https://twitter.com/" class="mobsocials__link" rel="noreferrer noopener" target="_blank">Twitter</a>
         </li>
         <li class="mobsocials__item">
-          <a href="https://facebook.com/" class="mobsocials__link">Facebook</a>
+          <a href="https://facebook.com/" class="mobsocials__link" rel="noreferrer noopener" target="_blank">Facebook</a>
         </li>
         <li class="mobsocials__item">
-          <a href="https://linkedin.com/" class="mobsocials__link">LinkedIn</a>
+          <a href="https://linkedin.com/" class="mobsocials__link" rel="noreferrer noopener" target="_blank">LinkedIn</a>
         </li>
       </ul>
     </div>
