--- a/portfolio.html
+++ b/portfolio.html
@@ -828,7 +828,7 @@
       </div>
     </footer>
 
-        <div class="menu__container js-menu-container" id="mobile-menu"">
+        <div class="menu__container js-menu-container" id="mobile-menu">
       <button type="button" class="menu__toggle js-close-menu">
         <svg class="mobile__icon" aria-label="мобільне меню">
           <use class="icon__close" href="./images/icons.svg#icon-close__menu"></use>
