--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                       ./images/desktop-solutions.webp    370w,
                       ./images/desktop-solutions@2x.webp 740w
                     "
+                    sizes="(min-width: 1200px) 370px"                    
                     media="(min-width: 1200px)"
                     type="image/webp"
                   />
@@ -130,10 +131,11 @@
                       ./images/desktop-solutions.jpg    370w,
                       ./images/desktop-solutions@2x.jpg 740w
                     "
+                    sizes="(min-width: 1200px) 370px"
                     media="(min-width: 1200px)"
                     type="image/jpg"
                   />
-
+                  
                   <img
                     class="activities__img"
                     src="./images/desktop-solutions.jpg"
@@ -153,6 +155,7 @@
                       ./images/mobile-applications.webp    370w,
                       ./images/mobile-applications@2x.webp 740w
                     "
+                    sizes="(min-width: 1200px) 370px"
                     media="(min-width: 1200px)"
                     type="image/webp"
                   />
@@ -161,6 +164,7 @@
                       ./images/mobile-applications.jpg    370w,
                       ./images/mobile-applications@2x.jpg 740w
                     "
+                    sizes="(min-width: 1200px) 370px"
                     media="(min-width: 1200px)"
                     type="image/jpg"
                   />
@@ -183,6 +187,7 @@
                       ./images/design-solutions.webp    370w,
                       ./images/design-solutions@2x.webp 740w
                     "
+                    sizes="(min-width: 1200px) 370px" 
                     media="(min-width: 1200px)"
                     type="image/webp"
                   />
@@ -191,6 +196,7 @@
                       ./images/design-solutions.jpg    370w,
                       ./images/design-solutions@2x.jpg 740w
                     "
+                    sizes="(min-width: 1200px) 370px" 
                     media="(min-width: 1200px)"
                     type="image/jpg"
                   />
